--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.vagrant
 **/clave.pub
 
 # Local .terraform directories
@@ -8,15 +7,8 @@
 *.tfstate
 **/*.tfstate.*
 
+**/.terraform.lock.hcl
 
-# Crash log files
-crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
 # *.tfvars
 *.tfvars.json
 
@@ -37,21 +29,6 @@ override.tf.json
 .terraformrc
 terraform.rc
 
-# Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Dependencias
-node_modules/
-
-# Archivos de entorno
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Archivos de configuración IDE
 /.vscode/
@@ -59,13 +36,3 @@ node_modules/
 *.swp
 *.swo
 *.sublime-workspace
-
-# Archivos de compilación
-/dist
-/tmp
-/out-tsc
-
-# Archivos de registro
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
